Funcionamiento correcto de listas enlazadas e implementacion de puntos

--- a/ProyectoPrograV2/ProyectoPrograV2.vcxproj
+++ b/ProyectoPrograV2/ProyectoPrograV2.vcxproj
@@ -133,16 +133,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="List.cpp" />
-    <ClCompile Include="Node.cpp" />
     <ClCompile Include="ProyectoPrograV2.cpp" />
+    <ClCompile Include="route.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="List.h" />
-    <ClInclude Include="Node.h" />
+    <ClInclude Include="route.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
