--- a/ProyectoPrograV2/ProyectoPrograV2.vcxproj.filters
+++ b/ProyectoPrograV2/ProyectoPrograV2.vcxproj.filters
@@ -18,21 +18,15 @@
     <ClCompile Include="ProyectoPrograV2.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="List.cpp">
-      <Filter>Archivos de origen</Filter>
-    </ClCompile>
-    <ClCompile Include="Node.cpp">
-      <Filter>Archivos de origen</Filter>
+    <ClCompile Include="route.cpp">
+      <Filter>Archivos de encabezado</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="List.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
-    <ClInclude Include="Node.h">
+    <ClInclude Include="route.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
