--- a/ProyectoPrograV2/ProyectoPrograV2.vcxproj
+++ b/ProyectoPrograV2/ProyectoPrograV2.vcxproj
@@ -135,12 +135,14 @@
   <ItemGroup>
     <ClCompile Include="ProyectoPrograV2.cpp" />
     <ClCompile Include="route.cpp" />
+    <ClCompile Include="TextBox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="route.h" />
+    <ClInclude Include="TextBox.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
